Fix center on safari

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -4,6 +4,10 @@
 //==============================================================================
 */
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: $link-color;
   text-decoration: none;
